--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-native-indicators": "^0.16.2",
+    "@types/react-native-onboarding-swiper": "^1.1.4",
     "@types/react-native-vector-icons": "^6.4.13",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-indicators": "^0.17.0",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0",
