--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-native-indicators": "^0.16.2",
     "@types/react-native-onboarding-swiper": "^1.1.4",
     "@types/react-native-vector-icons": "^6.4.13",
+    "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-indicators": "^0.17.0",
