--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-indicators": "^0.17.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "^4.5.0",
