--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-indicators": "^0.17.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^5.5.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0",
