--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-native-onboarding-swiper": "^1.1.4",
     "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.3.4",
+    "lottie-react-native": "^6.0.0-rc.3",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-confirmation-code-field": "^7.3.1",
